@@ -104,7 +104,7 @@ public class OptionsPane extends GridPane implements InputControl<Arguments> {
             Stream<List<?>> stream = Objects.requireNonNullElseGet(arg, Arguments::empty).stream(option);
             Optional<?> value = stream.filter(list -> !list.isEmpty())
                     .reduce((first, second) -> second)
-                    .map(list -> list.get(list.size() - 1));
+                    .map(list -> list.getLast());
             control.set(value.orElse(null));
         }
     }
